# PanTompkinsQRS

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  panTompkins.cpp  panTompkins.h  vcpkg.json
.github/: restyled.yml
.github/workflows/: check.yml
assets/: output.txt
src/: main.cpp  panTompkins.cpp  panTompkins.h
tests/: test_panTompkins.cpp
